Collada import of joints crashes blender #29621

Closed
opened 2011-12-14 17:32:14 +01:00 by Chad Gleason · 6 comments

%%%I'm including the crashing collada file in question. It's an export from Maya 2012. It's a simple piece of test geometry and a simple set of bones. I have had limited success getting bones into blender from collada, but there appears to be no rhyme or reason to what works and what doesn't. Hopefully this file will help figure things out.%%%

%%%I'm including the crashing collada file in question. It's an export from Maya 2012. It's a simple piece of test geometry and a simple set of bones. I have had limited success getting bones into blender from collada, but there appears to be no rhyme or reason to what works and what doesn't. Hopefully this file will help figure things out.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I'm also including the same file again, only with some animation on the joints as well. Just to give you some additional material to work with.
%%%

%%%I'm also including the same file again, only with some animation on the joints as well. Just to give you some additional material to work with. %%%
Author

%%%Just tested it with blender 2.61. Still crashes immediately when attempting to import.
%%%

%%%Just tested it with blender 2.61. Still crashes immediately when attempting to import. %%%

%%%Collada bugs are not being handled well so far,

for this reason they are all being set as 'TODO' and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada

This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Collada bugs are not being handled well so far, for this reason they are all being set as \'TODO\' and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Hi,

It looks like the app you use produces wrong .dae files. The <instance_controller> tag should contain tag in order to be correctly interpreted by the library Blender uses to read collada files. You can fix this by manually adding #[joint_id] under <instance_controller> (where [joint_id] should be replaced with the id of the root joint used in the skin).

Blender built at revision 44636 will not crash with the files you provided, but the mentioned manual fix is necessary to import skeletons.

I'm marking this report as fixed. Thanks for the report!%%%

%%%Hi, It looks like the app you use produces wrong .dae files. The <instance_controller> tag should contain <skeleton> tag in order to be correctly interpreted by the library Blender uses to read collada files. You can fix this by manually adding <skeleton>#[joint_id]</skeleton> under <instance_controller> (where [joint_id] should be replaced with the id of the root joint used in the skin). Blender built at revision 44636 will not crash with the files you provided, but the mentioned manual fix is necessary to import skeletons. I'm marking this report as fixed. Thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29621
No description provided.